--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ img{display:block;max-width:100%;height:auto}
         <img class="img img-left"  src="assets/mj_swordswoman.jpeg?v=101"  alt="Midjourney · apprentice swordswoman">
         <div class="reveal"><img class="img img-right" src="assets/wx_swordswoman.png?v=101" alt="Wenxin Yige · apprentice swordswoman"></div>
         <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label">Midjourney</span><span class="label">Wenxin Yige</span></div>
+       <div class="labels"><span class="label">Wenxin Yige</span><span class="label">Midjourney</span></div>
       </div>
     </article>
 
@@ -238,7 +238,7 @@ img{display:block;max-width:100%;height:auto}
              alt="Midjourney · apprentice archer">
         <div class="reveal"><img class="img img-right" src="assets/wx_archer.png?v=101" alt="Wenxin Yige · apprentice archer"></div>
         <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label">Midjourney</span><span class="label">Wenxin Yige</span></div>
+        <div class="labels"><span class="label">Wenxin Yige</span><span class="label">Midjourney</span></div>
       </div>
     </article>
 
@@ -249,7 +249,7 @@ img{display:block;max-width:100%;height:auto}
         <img class="img img-left"  src="assets/mj_forest_guardian.jpeg?v=101"  alt="Midjourney · young forest guardian">
         <div class="reveal"><img class="img img-right" src="assets/wx_forest_guardian.png?v=101" alt="Wenxin Yige · young forest guardian"></div>
         <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label">Midjourney</span><span class="label">Wenxin Yige</span></div>
+        <div class="labels"><span class="label">Wenxin Yige</span><span class="label">Midjourney</span></div>
       </div>
     </article>
   </section>
